[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-screenshot"
version = "0.1.0"
description = "Pixel-perfect website screenshot service exposed as both REST API and MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MFG" },
]
keywords = ["mcp", "screenshot", "playwright", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
    "playwright>=1.49.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-screenshot = "mcp_server:main"
screenshot-api = "server:main"

[project.urls]
Homepage = "https://github.com/therealMrFunGuy/mcp-server-screenshot"
Repository = "https://github.com/therealMrFunGuy/mcp-server-screenshot"

[tool.hatch.build.targets.wheel]
packages = ["."]
